# webots-vehicle_controller

./: .gitignore  CMakeLists.txt  README.md  README.md.autosave  best_gen.txt  evlearn.c  evlearn.h  genetic_self_driving_truck.wbt  genetic_truck.pro  truck_controller.c
include/: evlearn.h
src/: evlearn.c
test/: main.c
